compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__prelude__qualified_nil.snap
---
source: compiler-core/src/nix/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Nil }\n"
---
let
  mod''gleam = builtins.import ./../gleam.nix;
  
  go = {}: null;
in { inherit go; }
